--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ http = "0.2.9"
 hyper = "0.14.24"
 prost = "0.11.8"
 tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
+tokio-stream = "0.1.12"
 tonic = "0.8.3"
 tonic-web = "0.5.0"
 tower-http = { version = "0.4.0", features = ["cors"] }
