--- a/connect-example/package.json
+++ b/connect-example/package.json
@@ -19,6 +19,7 @@
     "@bufbuild/protoc-gen-connect-web": "^0.8.3",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
+    "mitt": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
