--- a/connect-example/package.json
+++ b/connect-example/package.json
@@ -7,15 +7,18 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "gen": "buf generate ../proto/hello.proto"
+    "gen": "buf generate ../proto/hello.proto",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@buf/bufbuild_eliza.bufbuild_connect-es": "0.8.3-20221224180530-f3801d450ef9.1",
+    "@buf/bufbuild_eliza.bufbuild_connect-es": "0.8.4-20221224180530-f3801d450ef9.1",
     "@bufbuild/connect": "^0.8.3",
-    "@bufbuild/connect-query": "^0.1.1",
+    "@bufbuild/connect-query": "^0.2.0",
     "@bufbuild/connect-web": "^0.8.3",
     "@bufbuild/protobuf": "^1.1.0",
-    "@bufbuild/protoc-gen-connect-query": "^0.1.1",
+    "@bufbuild/protoc-gen-connect-query": "^0.2.0",
     "@bufbuild/protoc-gen-connect-web": "^0.8.3",
     "@tanstack/react-query": "^4.26.1",
     "@tanstack/react-query-devtools": "^4.26.1",
@@ -27,11 +30,19 @@
     "@bufbuild/buf": "1.15.0",
     "@bufbuild/protoc-gen-connect-es": "^0.8.3",
     "@bufbuild/protoc-gen-es": "^1.1.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitest/browser": "^0.29.5",
+    "@vitest/ui": "^0.29.5",
+    "jsdom": "^21.1.1",
+    "msw": "^1.1.1",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vitest": "^0.29.5",
+    "webdriverio": "^8.6.3"
   }
 }
